feat: added react elements

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo": "^16.0.0",
     "react": "16.0.0-alpha.6",
     "react-native": "^0.43.4",
+    "react-native-elements": "^0.12.1",
     "react-redux": "^5.0.4",
     "react-router": "^4.0.0",
     "react-router-native": "^4.1.1",
