--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "author": "Jean-Claude Pratt-Delzenne <prattjames4@gmail.com> http://http://prattdelzenne.com",
   "license": "MIT",
   "devDependencies": {
+    "@kadira/react-native-storybook": "^2.0.0",
     "babel-preset-flow": "^6.23.0",
+    "concurrently": "^3.4.0",
     "flow-bin": "^0.45.0",
     "jest-expo": "^0.4.0",
     "react-native-scripts": "0.0.29",
@@ -13,11 +15,11 @@
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
-    "start": "react-native-scripts start",
+    "start": "concurrently --kill-others \"storybook start -p 7007\" \"react-native-scripts start\"",
+    "android": "concurrently --kill-others \"storybook start -p 7007\" \"react-native-scripts android\"",
+    "ios": "concurrently --kill-others \"storybook start -p 7007\" \"react-native-scripts ios\"",
     "eject": "react-native-scripts eject",
-    "android": "react-native-scripts android",
-    "ios": "react-native-scripts ios",
-    "test": "node node_modules/jest/bin/jest.js --watch"
+    "test": "node_modules/jest/bin/jest.js"
   },
   "jest": {
     "preset": "jest-expo"
